<resources>
    <string name="app_name">InventoryApp</string>

    <!-- Labels for app activities -->
    <string name="inventory_activity_label">List of Products</string>
    <string name="insert_product_activity_label">Insert Product</string>
    <string name="display_product_details_label">Product Details</string>
    <string name="edit_product_details_label">Edit Product Details</string>

    <!-- Strings user for menu items -->
    <string name="action_insert_dummy_products">Insert dummy products</string>
    <string name="delete_all_products">Delete all products</string>
    <string name="action_edit_product">Edit</string>

    <!-- labels for EditTexts in activity_insert_product.xml -->
    <string name="product_name">Product Name:</string>
    <string name="product_price">Product Price:</string>
    <string name="product_quantity">Quantity:</string>
    <string name="product_supplier">Supplier:</string>
    <string name="product_supplier_phone">Supplier Phone Number:</string>

    <!-- Text for buttons in activity_insert_product.xml -->
    <string name="save_button_insert">Save</string>
    <string name="order_button_insert">Order</string>
    <string name="delete_button_insert">Delete</string>
    <string name="decrease_quantity_button_insert">-</string>
    <string name="increase_quantity_button_insert">+</string>

    <!-- Toast messages informing the client of the required fields for a proper product storing in the database -->
    <string name="product_name_required">Product requires a name!</string>
    <string name="product_price_not_null">Product price must be provided!</string>
    <string name="product_price_positive">Product price must be positive!</string>
    <string name="product_quantity_positive">Product quantity must be positive!</string>
    <string name="product_quantity_not_null">Product quantity must be provided!</string>
    <string name="product_supplier_required">Product requires a supplier!</string>
    <string name="product_supplier_phone_required">The phone number of the supplier is required!</string>

    <!-- Toast messages related to user's attempt to save a product -->
    <string name="product_save_error">Error with saving product.</string>
    <string name="product_save_successful">Product saved.</string>

    <!-- Toast messages related to user's attempt to save a list of products -->
    <string name="products_save_error">Error with saving dummy products.</string>
    <string name="products_save_successful">Dummy products saved.</string>

    <!-- Toast messages related to user's attempt to delete a single product -->
    <string name="editor_delete_failure">Failed to delete product.</string>
    <string name="editor_delete_successful">Product successfully deleted.</string>

    <string name="database_delete_failure">Failed to delete all products from the database.</string>
    <string name="database_delete_successful">All products from the database deleted successfully.</string>

    <!-- Toast messages related to user's attempt to update the details of a product -->
    <string name="product_update_error">Error with updating product.</string>
    <string name="product_update_successful">Product updated.</string>

    <!-- Error message displayed when the user tries to reduce the quantity of a product below 0 -->
    <string name="quantity_error">Product quantity cannot be lower than 0.</string>

    <!-- Toast message confirming to user the sale of a product -->
    <string name="product_sold">Selling product.</string>

    <!-- text of the sell button in the list items -->
    <string name="list_item_sell">Sell</string>

    <!-- Text for list items in activity_inventory.xml -->
    <string name="list_item_product">Product: %1$s</string>
    <string name="list_item_price">Price: %1$d EUR</string>
    <string name="list_item_quantity">Quantity: %1$d</string>

    <!-- Text displayed in activity_inventory.xml when the database is empty -->
    <string name="empty_text">The products database is currently empty.\nPlease add products using the options in the menu in the app bar or using the add button below.</string>

    <!-- Toast messages related to not being able to call the supplier of a product -->
    <string name="no_phone_app">It looks like your device does not have an app that can handle phone calls.</string>
    <string name="call_dummy_product_supplier">You are viewing a dummy product.\nYou cannot call its supplier</string>

    <!-- Unsaved product changes dialogue -->
    <string name="unsaved_changes_dialogue_message">Do you want to discard your changes?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>

    <!-- Delete single product dialogue -->
    <string name="delete_dialog_msg">Are you sure you want to delete this product?\nThis operation cannot be undone.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Delete all products dialogue -->
    <string name="delete_all_dialog_msg">Are you sure you want to delete all products in the database?\nThis operation cannot be undone.</string>
    <string name="delete_all">Delete</string>
    <string name="cancel_all">Cancel</string>

    <string name="nothing_to_delete">There are currently no products in the database to delete.</string>

</resources>
