<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InsertProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                style="@style/text.editText.textInput"
                android:id="@+id/edit_text_product_name"
                android:hint="@string/product_name"/>

            <EditText
                style="@style/text.editText.numberInput"
                android:id="@+id/edit_text_product_price"
                android:hint="@string/product_price"/>

            <EditText
                style="@style/text.editText.numberInput"
                android:id="@+id/edit_text_product_quantity"
                android:hint="@string/product_quantity"/>

            <EditText
                style="@style/text.editText.textInput"
                android:id="@+id/edit_text_product_supplier"
                android:hint="@string/product_supplier"/>

            <EditText
                style="@style/text.editText.phoneInput"
                android:id="@+id/edit_text_product_supplier_phone"
                android:hint="@string/product_supplier_phone"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_save_insert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/save_button_insert"/>

</RelativeLayout>